--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.15.3",
+    "@types/mapbox-gl": "^2.7.19",
     "axios": "^1.6.2",
     "js-cookie": "^3.0.5",
+    "mapbox-gl": "^3.1.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-map-gl": "^7.1.7",
     "react-router-dom": "^6.19.0"
   },
   "devDependencies": {
