Agrego las librerias de Leaflet y hice la conexión a la API de MapBox

--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mapbox/mapbox-sdk": "^0.15.3",
-    "@types/mapbox-gl": "^2.7.19",
     "axios": "^1.6.2",
     "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
+    "leaflet-control-geocoder": "^2.4.0",
     "mapbox-gl": "^3.1.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-map-gl": "^7.1.7",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.19.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.8",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
