--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/mapbox-gl": "^2.7.20",
     "axios": "^1.6.2",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
@@ -20,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
+    "react-map-gl": "^7.1.7",
     "react-router-dom": "^6.19.0"
   },
   "devDependencies": {
