--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.1.7",
-    "react-router-dom": "^6.19.0"
+    "react-router-dom": "^6.19.0",
+    "react-slick": "^0.30.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
