--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.1.7",
+    "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.19.0",
     "react-slick": "^0.30.1",
     "slick-carousel": "^1.8.1"
