--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/mapbox-gl": "^2.7.20",
     "axios": "^1.6.2",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "mapbox-gl": "^3.1.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
