--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.19.0",
     "react-slick": "^0.30.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.10.5"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
